force-app/main/default/objects/Lilly_Session__c/fields/Lilly_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>