force-app/main/default/objects/Lilly_Session__c/fields/Lilly_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Presenter__c</fullName>
    <label>Presenter</label>
    <length>35</length>
    <type>Text</type>
</CustomField>