force-app/main/default/objects/Lilly_Session__c/fields/Lilly_Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Session_Description__c</fullName>
    <label>Session Description</label>
    <type>TextArea</type>
</CustomField>