force-app/main/default/objects/Lilly_Session__c/fields/OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>